5/8/19 -- Aron
	+added gravity in Fire::addForce()
	*organized code layout and fixed indexing into grid in Fire::propagateFront()
	*Corrected spelling of "propogate-->propagate" in function calls & comments
	*organized code in Fire::vort() & Fire::advect() ##I'm somewhat OCD on groupings of arithmetic for readability...
	-Removed the need to carry density at every cell
	+and instead included constants for the "fuel" & "product" densities
	+Wrote incomplete procedure, Fire::poissonPressure(), to build coefficient matrix A & vector b for 
		input into ConjugateGradient algorithm

5/9/19 -- Aron
	+ROutine to build A called "buildA()"
	+Completed poissonPressure
	*Modified "advect()" to instead update all velXYZ & Y at the same time
	+added a structure holding the grid normalized gradients at every cell called gridNorm
	+created data structure holding discontinuity corrections to pass into Trilerp
	